<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.polytech.amusees.MainActivity"
    tools:layout="@layout/fragment_register_account">

    <data>
        <variable
            name="viewModel"
            type="com.polytech.amusees.viewmodel.RegisterAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/ev_email" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ev_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/email"
                android:text="@={viewModel.user.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ev_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_email">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/login"
                android:text="@={viewModel.user.login}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ev_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ib_information"
            app:layout_constraintTop_toBottomOf="@id/ev_login">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:text="@={viewModel.user.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ib_information"
            android:src="@mipmap/ic_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/ev_password"
            android:layout_margin="0dp"
            android:background="@null"
            />

        <!-- Password verification -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ev_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_password">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_verif"
                android:text="@={viewModel.verifPassword}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_password2"
            android:onClick="@{() -> viewModel.onValidateAccount()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>